--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,11 +100,11 @@
               <p class="count-text">Sec</p>
             </li>
           </ul>
-          <h2 id="subHeading">Pre-Sale Countdown</h2>
+          <h2 id="subHeading">Pré vendan</h2>
         </div>
-        <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
+        <h1 id="mainHeading">NFT Em breve!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+         Novo NFT Lettuce Hands
         </p>
         <a
           id="actionButton"
